--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -2,4 +2,5 @@ add_subdirectory(Raylib)
 #add_subdirectory(SquirrelNoise)
 add_subdirectory(fmt)
 #add_subdirectory(thread-pool)
-add_subdirectory(flecs)
+#add_subdirectory(flecs)
+add_subdirectory(entt)
